# gno-ai-assistant

./: README.md
ai/: pyproject.toml
ai/config/: general.yaml  system_prompt.yaml
ai/src/: config.py  main.py
ai/src/agent/: agent.py  prompt.py
front/src/: App.tsx
